[project]
name = "kazoo"
authors = [
    {name = "Kazoo team", email = "python-zk@googlegroups.com"}
]
description = "Higher Level Zookeeper Client"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = []
keywords = ["zookeeper", "lock", "leader", "configuration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://kazoo.readthedocs.io"
Documentation = "https://kazoo.readthedocs.io"
Changelog = "https://github.com/python-zk/kazoo/releases"
Repository = "https://github.com/python-zk/kazoo"
"Bug Tracker" = "https://github.com/python-zk/kazoo/issues"

[project.optional-dependencies]
eventlet = ["eventlet>=0.17.1; implementation_name!='pypy'"]
gevent = [
    "gevent>=20.6.2",
]
sasl = ["pure_sasl>=0.5.1"]
test = [
    "pytest>=8.1.1",
    "objgraph>=3.6.1",
]
testing = [
    "pyjks>=20.0.0",
    "pyopenssl>=24.1.0",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 46.4.0', "setuptools_scm"
]

[tool.setuptools]
packages = ["kazoo"]

[tool.setuptools.dynamic]
version = {attr= "kazoo.version.__version__"}
readme = {file = ["README.md", "CHANGES.md"], content-type = "text/markdown"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.4",
    "mypy>=1.9.0",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx-autodoc-typehints>=2.0.0",
]
ci = [
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.1",
    "tox>=4.14.2",
    "tox-pdm>=0.7.2",
]

[tool.ruff]
builtins = ["_"]
extend-exclude = [
    "build/",
    "docs/conf.py",
    "*egg",
    "__pycache__",
    "zookeeper/",
]
line-length = 79

[tool.black]
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# (
#   ^/foo.py     # exclude a file named foo.py in the root of the project.
#   | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the
# )
#               # project.
extend-exclude = '''
'''

[tool.pytest.ini_options]
addopts = "-ra -v --color=yes"
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
# Per-test timeout in seconds
timeout = 180

[tool.mypy]

# For details on each flag, please see the mypy documentation at:
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file

# Note: The order of flags listed here should match the order used in mypy's
# documentation to make it easier to find the documentation for each flag.

# Import Discovery
ignore_missing_imports = false

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
implicit_optional = false
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = true
implicit_reexport = false
strict_concatenate = true
strict_equality = true
strict = true

# Configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
pretty = true
color_output = true
error_summary = true
show_absolute_path = true

# Miscellaneous
warn_unused_configs = true
verbosity = 0

# FIXME: As type annotations are introduced, please remove the appropriate
#        ignore_errors flag below. New modules should NOT be added here!

[[tool.mypy.overrides]]
module = [
    'kazoo.client',
    'kazoo.exceptions',
    'kazoo.handlers.eventlet',
    'kazoo.handlers.gevent',
    'kazoo.handlers.threading',
    'kazoo.handlers.utils',
    'kazoo.hosts',
    'kazoo.interfaces',
    'kazoo.loggingsupport',
    'kazoo.protocol.connection',
    'kazoo.protocol.paths',
    'kazoo.protocol.serialization',
    'kazoo.protocol.states',
    'kazoo.recipe.barrier',
    'kazoo.recipe.cache',
    'kazoo.recipe.counter',
    'kazoo.recipe.election',
    'kazoo.recipe.lease',
    'kazoo.recipe.lock',
    'kazoo.recipe.partitioner',
    'kazoo.recipe.party',
    'kazoo.recipe.queue',
    'kazoo.recipe.watchers',
    'kazoo.retry',
    'kazoo.security',
    'kazoo.testing.common',
    'kazoo.testing.harness',
    'kazoo.tests.conftest',
    'kazoo.tests.test_barrier',
    'kazoo.tests.test_build',
    'kazoo.tests.test_cache',
    'kazoo.tests.test_client',
    'kazoo.tests.test_connection',
    'kazoo.tests.test_counter',
    'kazoo.tests.test_election',
    'kazoo.tests.test_eventlet_handler',
    'kazoo.tests.test_exceptions',
    'kazoo.tests.test_gevent_handler',
    'kazoo.tests.test_hosts',
    'kazoo.tests.test_interrupt',
    'kazoo.tests.test_lease',
    'kazoo.tests.test_lock',
    'kazoo.tests.test_partitioner',
    'kazoo.tests.test_party',
    'kazoo.tests.test_paths',
    'kazoo.tests.test_queue',
    'kazoo.tests.test_retry',
    'kazoo.tests.test_sasl',
    'kazoo.tests.test_security',
    'kazoo.tests.test_selectors_select',
    'kazoo.tests.test_threading_handler',
    'kazoo.tests.test_utils',
    'kazoo.tests.test_watchers',
    'kazoo.tests.util',
    'kazoo.version'
]
ignore_errors = true

